--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -8,7 +8,7 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 --enable-native-access=ALL-UNNAMED
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -28,8 +28,10 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-# Enable BuildConfig generation
-android.defaults.buildfeatures.buildconfig=true
+# BuildConfig is now configured in build.gradle.kts buildFeatures block
 
 # Enable Jetpack Compose
 android.enableJetifier=true
+
+# Suppress compileSdk warning
+android.suppressUnsupportedCompileSdk=36
